# teabloom_garden_game

./: .git-tag-v1.0.1  PACKAGING.md  README.md  RELEASE_NOTES.md  fluid_simulation.py  generate_cat_image.py  generate_sprite_config.py  hello.py  main.py  pyproject.toml  sprite_viewer.py  test_draw_heart.py  test_title_scene.py
.github/workflows/: build.yml  frontend-pages.yml
assets/: icon.icns
assets/images/grids/: cha_ban_grid.png~
data/: .gitignore  cats_data.json  sprites_config.json  teas_data.json
documents/: GAME_DESIGN.md  GAME_SCENE_DESIGN.md  IMAGE_PROMPTS.md  QUICK_IMAGE_GUIDE.md  SOUND_SYSTEM.md
frontend_version/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend_version/public/data/: cats_data.json  sprites_config.json  teas_data.json
frontend_version/src/: App.tsx  styles.css
frontend_version/src/game/: data.ts  engine.ts  fluidSimulation.ts  (+7 more)
game/: __init__.py  game_state.py  packaging.py  shared_sim.py  sound_manager.py  sprite_loader.py
game/entities/: __init__.py  cat.py  tea.py
game/scenes/: __init__.py  fluid_simulation_scene.py  game_scene.py  game_scene.py.backup  loading_scene.py  menu_scene.py  stats_scene.py  title_scene.py
game/tea_objects/: __init__.py  cat_visitor.py  cha_hai.py  hot_water_kettle.py  tea_cup.py  tea_disk.py  tea_god.py  tea_kettle.py
game/ui/: __init__.py  button.py  particle_system.py  petal_particle.py  popup_notification.py  procedural_background.py  progress_bar.py  text.py  tooltip.py
scripts/: build_local_mac.sh  build_local_windows.ps1
