[project]
name = "tea-garden-cats"
version = "0.1.0"
description = "A cozy game about serving tea to cats"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.62.0",
    "openai>=2.16.0",
    "pillow>=12.1.0",
    "pygame>=2.5.0",
    "pygame-emojis>=0.2.0",
    "python-dotenv>=1.2.1",
]
scripts = { "tea-garden-cats" = "main:main" }
